unpackaged/main/default/objects/pse__Budget__c/fields/Change_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Type__c</fullName>
    <description>This custom field will be used for Budget approval purposes.</description>
    <label>Change Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Credit - fee waiver</fullName>
            </value>
            <value>
                <fullName>Fixed Price Overage</fullName>
            </value>
            <value>
                <fullName>Non Chargeable client work (FOC)</fullName>
            </value>
            <value>
                <fullName>Proposal and SOW</fullName>
                <default>true</default>
                <label>Proposal and SOW</label>
            </value>
            <value>
                <fullName>Service Credit against License</fullName>
            </value>
            <value>
                <fullName>Client Credit - incorrect Billing</fullName>
                <isActive>false</isActive>
                <label>Client Credit - incorrect Billing</label>
            </value>
            <value>
                <fullName>Hosting - Change Management Credit/ Training Credits being repurposed.</fullName>
                <isActive>false</isActive>
                <label>Hosting - Change Management Credit/ Training Credits being repurposed.</label>
            </value>
            <value>
                <fullName>Internal project resourcing (projects outside of EDM/TF)</fullName>
                <isActive>false</isActive>
                <label>Internal project resourcing (projects outside of EDM/TF)</label>
            </value>
            <value>
                <fullName>Rate Discount</fullName>
                <isActive>false</isActive>
                <label>Rate Discount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>