unpackaged/main/default/objects/pse__Budget__c/fields/ffps_ihs__BudgetedHours__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__BudgetedHours__c</fullName>
    <label>Budgeted Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>