unpackaged/main/default/objects/pse__Budget__c/fields/ffps_ihs__OverrideAmount__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__OverrideAmount__c</fullName>
    <label>Override Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>