unpackaged/main/default/objects/pse__Budget__c/fields/psa_Corp_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>psa_Corp_Total_Amount__c</fullName>
    <formula>pse__Total_Amount__c / CURRENCYRATE(TEXT(CurrencyIsoCode) )</formula>
    <label>Corp: Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>