unpackaged/main/default/objects/pse__Budget__c/fields/psa_Project_Director__c.field-meta.xml
<CustomField>
    <fullName>psa_Project_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>