unpackaged/main/default/objects/pse__Budget__c/fields/pse__Billing_Event_Item__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Event_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Event Item</label>
    <referenceTo>pse__Billing_Event_Item__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>