unpackaged/main/default/objects/pse__Budget__c/fields/pse__Budget_Header__c.field-meta.xml
<CustomField>
    <fullName>pse__Budget_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Header</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>pse__Budget_Header__c.pse__Project__c</field>
            <operation>equals</operation>
            <value>Project__c</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pse__Budget_Header__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>