unpackaged/main/default/objects/pse__Budget__c/fields/pse__Override_Project_Practice_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Project_Practice_Currency_Code__c</fullName>
    <formula>TEXT(pse__Override_Project_Practice__r.CurrencyIsoCode)</formula>
    <label>Override Project Practice Currency Code</label>
    <type>Text</type>
</CustomField>