unpackaged/main/default/objects/pse__Budget__c/fields/pse__Pre_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Pre_Billed_Amount__c</fullName>
    <description>The portion of the combined Budget/Expense Amounts to be pre-billed. Defaults to and must always be same currency as Project. This field is a replacement for the old Pre-Billed Amount field (PreBilledAmount__c) which did not allow non-integer decimals.</description>
    <inlineHelpText>The portion of the combined Budget/Expense Amounts to be pre-billed. Defaults to and must always be same currency as Project. This field is a replacement for the old Pre-Billed Amount field (PreBilledAmount__c) which did not allow non-integer decimals.</inlineHelpText>
    <label>Pre-Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>