unpackaged/main/default/objects/pse__Budget__c/fields/pse__PreBilledAmount__c.field-meta.xml
<CustomField>
    <fullName>pse__PreBilledAmount__c</fullName>
    <description>The field is deprecated. It has been replaced by Pre_Billed_Amount__c.</description>
    <label>DEPRECATED: Pre-Billed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>