unpackaged/main/default/objects/pse__Budget__c/recordTypes/Customer_Purchase_Order_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Customer_Purchase_Order_Change_Request</fullName>
    <active>true</active>
    <label>Customer Purchase Order Change Request</label>
</RecordType>