unpackaged/main/default/objects/pse__Budget__c/validationRules/pse__Budget_Header_Account_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Budget_Header_Account_Mismatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0, pse__Budget_Header__r.pse__Account__c != pse__Account__c)</errorConditionFormula>
    <errorDisplayField>pse__Budget_Header__c</errorDisplayField>
    <errorMessage>The budget header's account must match the account on this budget</errorMessage>
</ValidationRule>