unpackaged/main/default/objects/pse__Budget__c/validationRules/pse__Budget_Header_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Budget_Header_Project_Mismatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0,pse__Budget_Header__r.pse__Project__c != pse__Project__c)</errorConditionFormula>
    <errorDisplayField>pse__Budget_Header__c</errorDisplayField>
    <errorMessage>The budget header's project does not match the project on this budget</errorMessage>
</ValidationRule>