unpackaged/main/default/objects/pse__Budget__c/validationRules/pse__Budget_Header_Type_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Budget_Header_Type_Mismatch</fullName>
    <active>false</active>
    <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0,TEXT(pse__Budget_Header__r.pse__Type__c) != TEXT(pse__Type__c))</errorConditionFormula>
    <errorDisplayField>pse__Type__c</errorDisplayField>
    <errorMessage>The budget header's type must match the type on this budget</errorMessage>
</ValidationRule>