unpackaged/main/default/objects/pse__Budget__c/validationRules/pse__Master_Budget_is_Constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Master_Budget_is_Constant</fullName>
    <active>true</active>
    <description>Master Budget cannot be changed once set.</description>
    <errorConditionFormula>AND(ISCHANGED(pse__Budget_Header__c),LEN(PRIORVALUE(pse__Budget_Header__c))&gt;0)</errorConditionFormula>
    <errorDisplayField>pse__Budget_Header__c</errorDisplayField>
    <errorMessage>Master Budget cannot be changed once set.</errorMessage>
</ValidationRule>