unpackaged/main/default/objects/pse__Budget__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Effective_Date__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>pse__Amount__c</columns>
    <columns>pse__Expense_Amount__c</columns>
    <columns>pse__PreBilledAmount__c</columns>
    <columns>pse__Type__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Approved__c</columns>
    <columns>pse__Include_In_Financials__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>